--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 	<div class="container">
 		<div class="border"></div>
+		<div class="crosshair-x"></div>
+		<div class="crosshair-y"></div>
+		<img src="assets/meta/cursor.svg" class="cursor">
+
 		<div class="content">
 			<!-- INTRO -->
 			<div id="intro1" class="link" data-pos="0,0" data-connections="intro2">
